[gd_scene load_steps=13 format=3 uid="uid://d0m7j1aemc8je"]

[ext_resource type="Script" path="res://scripts/slime.gd" id="1_n6pvg"]
[ext_resource type="Texture2D" uid="uid://benydiopr61so" path="res://assets/brackeys_platformer_assets/sprites/slime_green.png" id="1_p2gj0"]

[sub_resource type="AtlasTexture" id="AtlasTexture_pjw23"]
atlas = ExtResource("1_p2gj0")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_2npkn"]
atlas = ExtResource("1_p2gj0")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_fd6lc"]
atlas = ExtResource("1_p2gj0")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_gstla"]
atlas = ExtResource("1_p2gj0")
region = Rect2(72, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_1lmhy"]
atlas = ExtResource("1_p2gj0")
region = Rect2(0, 54, 24, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_hlmps"]
atlas = ExtResource("1_p2gj0")
region = Rect2(24, 54, 24, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_3yu2c"]
atlas = ExtResource("1_p2gj0")
region = Rect2(48, 54, 24, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_r7vq6"]
atlas = ExtResource("1_p2gj0")
region = Rect2(72, 54, 24, 18)

[sub_resource type="SpriteFrames" id="SpriteFrames_v5wyi"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pjw23")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2npkn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fd6lc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gstla")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1lmhy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hlmps")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3yu2c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3yu2c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r7vq6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1lmhy")
}],
"loop": true,
"name": &"hurt",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8spqb"]
size = Vector2(14, 15)

[node name="Slime" type="Node2D"]
script = ExtResource("1_n6pvg")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_v5wyi")
autoplay = "default"

[node name="RayCastBottomRight" type="RayCast2D" parent="."]
position = Vector2(8, 0)
target_position = Vector2(0, 18)

[node name="RayCastBottomLeft" type="RayCast2D" parent="."]
position = Vector2(-8, 0)
target_position = Vector2(0, 18)

[node name="RayCastRight" type="RayCast2D" parent="."]
target_position = Vector2(18, 0)

[node name="RayCastLeft" type="RayCast2D" parent="."]
target_position = Vector2(-18, 0)

[node name="RayCastBottom" type="RayCast2D" parent="."]
target_position = Vector2(0, 13)

[node name="RayCastBottom3" type="RayCast2D" parent="."]
position = Vector2(6, 0)
target_position = Vector2(0, 11)

[node name="RayCastBottom2" type="RayCast2D" parent="."]
position = Vector2(-6, 0)
target_position = Vector2(0, 11)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 32
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0, 4.5)
shape = SubResource("RectangleShape2D_8spqb")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
